examples/negative/pub_enforcement/violation_prelude/secret_lib.prelude.kai
pub fn visible() : Int = 1

fn secret() : Int = 2
